<resources>
    <string name="app_name">M.Live</string>
    <string name="_0_00">0:00</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="prem_rawat">Prem Rawat</string>
    <string name="album">album</string>
    <string name="play_music">Play Music</string>
    <string name="scroll_to_play_more_musics">Scroll to play more musics</string>

</resources>